--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,5 +5,6 @@ Version: 0.1.0
 Author: Ismail Khalil 
 Maintainer: <ismailkhalil@gmail.com>
 Description:The first algoritm to implement is the Euclidian algorithm to find the greatest common divisor of two numbers.
-License: MIT Liscence 
+License: GPL-3
 RoxygenNote: 6.1.1
+LazyData: true
